--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <option value="user">推薦人</option>
               <option value="tag">標籤</option>
             </select>
-            <button class="btn btn-outline-success" type="submit" @click="searchBtnClicked">
+            <button class="btn btn-outline-success" type="submit" @click.prevent="searchBtnClicked">
               <i class="bi-search d-md-none"></i>
               <span class="d-none d-md-block">搜尋</span></a>
 
