--- a/index.html
+++ b/index.html
@@ -50,11 +50,32 @@
       transform: translateX(30px);
     }
 
+    /* 对移动中的元素应用的过渡 */
+    .card-move {
+      transition: all 1s ease;
+    }
+
+
+    /* .card-move, */
+    .card-leave-active,
+    .card-enter-active {
+      transition: 
+        opacity 0.5s,
+        transform 1s ease;
+
+    }
+
+    .card-leave-to,
+    .card-enter-from {
+      opacity: 0;
+      transform: translateX(-500px);
+    }
+
     /* 确保将离开的元素从布局流中删除
   以便能够正确地计算移动的动画。 */
-    /* .list-leave-active {
+    .card-leave-active {
       position: absolute;
-    } */
+    }
   </style>
 </head>
 
@@ -439,7 +460,7 @@
         </div>
       </div>
       <!-- 主要的卡片顯示區塊 -->
-      <transition-group name="list" tag="div" class="row">
+      <transition-group name="card" tag="div" class="row" style="position: relative;">
 
         <!-- <div class="row"> -->
         <!-- 為空時顯示佔位符 -->
