--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     }
 
     /* 对移动中的元素应用的过渡 */
-    .card-move {
+    /* .card-move {
       transition: all 1s ease;
-    }
+    } */
 
 
     /* .card-move, */
-    .card-leave-active,
+    /* .card-leave-active,
     .card-enter-active {
       transition:
         opacity 0.5s,
@@ -69,13 +69,13 @@
     .card-enter-from {
       opacity: 0;
       transform: translateX(-500px);
-    }
+    } */
 
     /* 确保将离开的元素从布局流中删除
   以便能够正确地计算移动的动画。 */
-    .card-leave-active {
+    /* .card-leave-active {
       position: absolute;
-    }
+    } */
   </style>
 </head>
 
@@ -512,9 +512,9 @@
         </div>
       </div>
       <!-- 主要的卡片顯示區塊 -->
-      <transition-group name="card" tag="div" class="row">
+      <!-- <transition-group name="card" tag="div" class="row"> -->
 
-        <!-- <div class="row"> -->
+      <div class="row">
         <!-- 為空時顯示佔位符 -->
 
         <template v-if="comicMainPageList.length === 0 && searchText.length === 0">
@@ -554,8 +554,8 @@
           v-show="addComicObj.searchComicList.length != 0 && tabSelected =='addComic'"
           @click="searchBtnClicked('loadMore')" :disabled="isLoading"><span v-show="isLoading"
             class="spinner-border spinner-border-sm" aria-hidden="true"></span>{{isLoading?'讀取中……':'載入更多'}}</button>
-        <!-- </div> -->
-      </transition-group>
+      </div>
+      <!-- </transition-group> -->
     </div>
 
   </div>
