--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <!-- 測試區域 -->
         <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          {{this.bottomVisible + " : " + this.loadCardsNum}}
+          {{ this.selectedComicIndex +" : "+ this.comicMainPageObj.selectedID}}
         </button> -->
 
         <form class="d-flex" role="search">
@@ -175,7 +175,7 @@
                     v-if="parseInt(new Date - new Date(comicMainPageList[selectedComicIndex][11])) / 3600000 /24 > 180 && !comicMainPageList[selectedComicIndex][10]">疑似棄坑</span>
                 </div>
               </div>
-              <h5>{{comicMainPageList[selectedComicIndex][1]}}</h5>
+              <h5>{{comicMainPageList[selectedComicIndex][1]}} <i class="bi bi-share cursor_pointer" @click="copyURL(getUrl() + '?comicName='+ comicMainPageList[selectedComicIndex][1])"></i></h5>
 
               <p>作者：{{comicMainPageList[selectedComicIndex][2]}} <a :href="comicMainPageList[selectedComicIndex][7]"
                   target="_blank">漫畫鏈結</a>
